working with judge0 free edition

--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
     </div>
     <div class="buttonContainer">
       <input class="runButton" id="runButton" type="button" value="Run" />
-      <div class="outputContainer">
-        <pre class="codeOutput" id="codeOutput"></pre>
-      </div>
+      <input
+        class="submitButton"
+        id="submitButton"
+        type="button"
+        value="Submit"
+      />
+    </div>
+    <div class="outputContainer">
+      <pre class="codeOutput" id="codeOutput"></pre>
     </div>
     <div class="nextButtonContainer" id="nextButtonContainer">
       <p class="completedText">You completed the problem congratulations</p>
