bug fix, animation added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
       />
     </div>
     <div class="outputContainer">
+      <div id="loader" class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <pre class="codeOutput" id="codeOutput"></pre>
     </div>
     <div class="nextButtonContainer" id="nextButtonContainer">
