integration with webapp

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </button>
           </div>
           <div id="tabProblemText" class="tabContent">
-            <p class="problemParagraph" id="problemParagraph"></p>
+            <pre class="problemParagraph" id="problemParagraph"></pre>
           </div>
           <div id="tabSolutionText" class="tabContent">
             <pre class="solutionParagraph" id="solutionParagraph"></pre>
