--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="selectContainer">
         <div class="hintContainer">
-          <p class="hintText" id="hintText"></p>
+          <p class="hintText" id="hintText">Under development</p>
         </div>
       </div>
       <div class="editorContainer">
