small updates to UI and generator

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="selectContainer">
         <div class="hintContainer">
-          <p class="hintText" id="hintText">Under development</p>
+          <p class="hintText" id="hintText">Alpha build</p>
         </div>
       </div>
       <div class="editorContainer">
@@ -46,6 +46,7 @@
         id="submitButton"
         type="button"
         value="Submit"
+        hidden
       />
     </div>
     <div class="outputContainer">
