hopefully final fix for utf-8 encoding issue

--- a/index.html
+++ b/index.html
@@ -52,17 +52,29 @@
         <span></span>
         <span></span>
       </div>
-      <pre class="codeOutput" id="codeOutput"></pre>
+      <div class="codeOutput" id="codeOutput"></div>
     </div>
     <div class="nextButtonContainer" id="nextButtonContainer">
       <p class="completedText">You completed the problem congratulations</p>
       <input class="nextButton" id="nextButton" value="Next" type="button" />
     </div>
-    <script type="module" src="./codemirror/lib/codemirror.js"></script>
-    <script type="module" src="./codemirror/mode/xml/xml.js"></script>
-    <script type="module" src="./codemirror/mode/python/python.js"></script>
-    <script src="model.js"></script>
-    <script src="view.js"></script>
-    <script src="controller.js"></script>
+    <script
+      charset="UTF-8"
+      type="module"
+      src="./codemirror/lib/codemirror.js"
+    ></script>
+    <script
+      charset="UTF-8"
+      type="module"
+      src="./codemirror/mode/xml/xml.js"
+    ></script>
+    <script
+      charset="UTF-8"
+      type="module"
+      src="./codemirror/mode/python/python.js"
+    ></script>
+    <script type="text/javascript" src="model.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="view.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="controller.js" charset="UTF-8"></script>
   </body>
 </html>
