added skip button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         value="Submit"
         hidden
       />
+      <input class="skipButton" id="skipButton" type="button" value="Skip" />
     </div>
     <div class="outputContainer">
       <div id="loader" class="loader">
